# msoffcrypto-tool

./: .gitignore  .noserc  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  ms-offcrypto-tool.py  ms_offcrypto_tool.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
docs/: Makefile  cli.rst  conf.py  index.rst  make.bat  modules.rst  msoffcrypto.exceptions.rst  msoffcrypto.format.rst  msoffcrypto.method.container.rst  msoffcrypto.method.rst  msoffcrypto.rst  requirements.txt
msoffcrypto/: __init__.py  __main__.py  exceptions.py  msoffcrypto.py  officefile.py  ooxml.py
msoffcrypto/exceptions/: __init__.py
msoffcrypto/format/: base.py  common.py  doc97.py  ooxml.py  ppt97.py  xls97.py
msoffcrypto/method/: ecma376.py  ecma376_agile.py  ecma376_encrypted.py  ecma376_standard.py  rc4.py  rc4_cryptoapi.py  xor_obfuscation.py
tests/: Encrypted_PPT_Sample.ppt  problematic_decrypted_sample.ppt  test_cli.py  test_cli.sh  test_compare_known_output.py  test_file_handle.py  tests.sh
tests/inputs/: ecma376standard_password.docx  example_password.docx  example_password.xlsx  plain.doc  plain.xls  rc4cryptoapi_password.doc  rc4cryptoapi_password.ppt  rc4cryptoapi_password.xls  xor_password_123456789012345.xls
tests/outputs/: ecma376standard_password_plain.docx  example.docx  example.xlsx  rc4cryptoapi_password_plain.doc  rc4cryptoapi_password_plain.ppt  rc4cryptoapi_password_plain.xls  xor_password_123456789012345_plain.xls
