[tool.poetry]
name = "msoffcrypto-tool"
version = "5.2.0"
description = "Python tool and library for decrypting MS Office files with passwords or other keys"
license = "MIT"
homepage = "https://github.com/nolze/msoffcrypto-tool"
authors = ["nolze <nolze@archlinux.us>"]
readme = "README.md"
packages = [{ include = "msoffcrypto" }]

[tool.poetry.dependencies]
python = "^3.8"
cryptography = ">=35.0"
olefile = ">=0.46"

[tool.poetry.group.dev.dependencies]
# pytest = { version = ">=6.2.1", python = "^3.7" }
# black = { version = "^20.8b1", python = "^3.7" }
black = "^23.7.0"
pytest = "^7.4.0"
coverage = { extras = ["toml"], version = "^5.3.1" }


[tool.poetry.group.docs.dependencies]
sphinx-autobuild = "^2021.3.14"
furo = "^2023.9.10"
myst-parser = "^2.0.0"
sphinxcontrib-autoprogram = "^0.1.8"

[tool.poetry.scripts]
msoffcrypto-tool = 'msoffcrypto.__main__:main'

[tool.black]
line-length = 140
exclude = '/(\.git|\.pytest_cache|\.venv|\.vscode|dist|docs)/'

[tool.pytest.ini_options]
addopts = "-ra -q --doctest-modules"
testpaths = ["msoffcrypto", "tests"]

[tool.coverage.run]
omit = [".venv/*", "tests/*"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
