[tool.poetry]
name = "msoffcrypto-tool"
version = "5.4.2"
description = "Python tool and library for decrypting and encrypting MS Office files using a password or other keys"
license = "MIT"
homepage = "https://github.com/nolze/msoffcrypto-tool"
authors = ["nolze <nolze@int3.net>"]
readme = "README.md"
packages = [{ include = "msoffcrypto" }, { include = "NOTICE.txt" }]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = ">=39.0"
olefile = ">=0.46"

[tool.poetry.group.dev.dependencies]
# pytest = { version = ">=6.2.1", python = "^3.7" }
pytest = "^9.0.2"
coverage = { extras = ["toml"], version = "^7.5" }


[tool.poetry.group.docs.dependencies]
sphinx = "^8"
sphinx-autobuild = "2024.10.02"
furo = "2025.12.19"
myst-parser = "^4.0.1"
sphinxcontrib-autoprogram = "^0.1.8"

[tool.poetry.scripts]
msoffcrypto-tool = 'msoffcrypto.__main__:main'

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.black]
line-length = 140
exclude = '/(\.git|\.pytest_cache|\.venv|\.vscode|dist|docs)/'

[tool.pytest.ini_options]
addopts = "-ra -q --doctest-modules"
testpaths = ["msoffcrypto", "tests"]

[tool.coverage.run]
omit = [".venv/*", "tests/*"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
